# chat-chat

./: .gitignore  2025-07-30-caveat-the-messages-below-were-generated-by-the-u.txt  2025-07-31-caveat-the-messages-below-were-generated-by-the-u.txt  2025-08-01-prompt-system-p.txt  CLAUDE.md  README.md  config.example.yaml  line_adapter.py  llm_architect.md  main.py  memory_design.txt  pyproject.toml  test_state_fix.py
adapters/base/: __init__.py  platform_base.py
base/: __init__.py
bot_gateway/: gateway.py
config/: settings.py
data/: customers.json
data/longterm/: .gitkeep
data/longterm/store_001/: store_001_line_U6e027183738a73e6a8583c0d4fe26b49.json
docs/: adapter-platform-functions.md  store-setup-guide.md
llm/: __init__.py  config.py  event_processor.py  factory.py  llm_api.py  llm_service.py  models.py  postprocess_strategy.py  prompt_strategy.py  prompt_templates.py
memory/: MEMORY_SYSTEM.md  __init__.py  event_processor.py  lm_json_store.py  memory_manager.py
models/: __init__.py  customer.py  memory.py  message.py  platform.py  session.py  store.py  user.py
services/: __init__.py  adapter_factory.py  customer_service.py  store_service.py
session/: context_schema.py  session_manager.py  store_redis.py
tests/: __init__.py  conftest.py  test_config.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  mock_data.py  sample_webhooks.json  test_customers.json
tests/integration/: test_webhook_flow.py
tests/unit/adapters/: __init__.py
tests/unit/memory/: test_memory_advanced.py  test_memory_integration.py  test_memory_real_redis.py  test_memory_simple.py  test_memory_system.py
tests/unit/models/: __init__.py  test_message.py
tests/utils/: __init__.py  mock_adapters.py  redis_test_utils.py  test_helpers.py
user/: profile_service.py
utils/: logger.py
